# AlphaMind-Design-v0.1

./: .env.example  .gitignore  CHANGELOG.md  CODEX.md  LICENSE  README.md  TASK_BOARD.md  package.json  pnpm-workspace.yaml
backend/: alphamind-backend.spec  pyproject.toml
backend/app/: __init__.py  main.py  packaged.py
backend/app/ai/: __init__.py  service.py
backend/app/api/: analyze.py  company.py  home.py  journal.py  settings.py  watchlist.py
backend/app/config/: settings.py
backend/app/core/: exceptions.py
backend/app/database/: __init__.py  config.py  database.py  session.py
backend/app/models/: __init__.py  journal.py  settings.py  watchlist.py
backend/app/repositories/: __init__.py  journal.py  settings.py  watchlist.py
backend/app/schemas/: __init__.py  ai.py  company.py  home.py  journal.py  settings.py  watchlist.py
backend/app/services/: __init__.py  company.py  company_mock_data.py  home.py  journal.py  settings.py  watchlist.py
backend/tests/: test_ai.py  test_company.py  test_database.py  test_health.py  test_home.py  test_journal.py  test_settings.py  test_watchlist.py
docs/00_Project/: PRODUCT_VISION.md
docs/01_Product/: MVP_PRD.md
docs/03_Architecture/: ARCHITECTURE.md
docs/04_Database/: DATABASE.md
docs/05_API/: API_SPEC.md
docs/06_Data/: DATA_PROVIDER_SPEC.md
docs/07_UI/: UI_SPEC.md
docs/08_Features/: Company.md  Decision.md  Home.md  (+3 more)
frontend/: index.html  package.json  vite.config.ts
scripts/: README.md  build-backend-macos-x64.sh  build-icon.sh  build-macos-x64.sh  verify-release.sh
tests/: README.md
(+77 files in other folders)
