[project]
name = "alphamind-backend"
version = "0.1.0"
description = "Local API for AlphaMind OS"
requires-python = ">=3.12,<3.13"
dependencies = [
    "aiosqlite>=0.22.1,<1",
    "fastapi>=0.128.0,<1",
    "greenlet>=3.3.1,<4",
    "httpx>=0.28.1,<1",
    "pydantic-settings>=2.12.0,<3",
    "sqlmodel>=0.0.31,<1",
    "structlog>=25.5.0,<26",
    "uvicorn[standard]>=0.40.0,<1",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1,<2",
    "pytest>=9.0.2,<10",
    "pytest-asyncio>=1.3.0,<2",
    "ruff>=0.14.14,<1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
